other-vpol/restrict-binding-system-groups/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-binding-system-groups
policies:
- ../restrict-binding-system-groups.yaml
resources:
- ../.chainsaw-test/crb-bad.yaml
- ../.chainsaw-test/crb-good.yaml
- ../.chainsaw-test/rb-bad.yaml
- ../.chainsaw-test/rb-good.yaml
results:
- policy: restrict-binding-system-groups
  isValidatingPolicy: true
  kind: ClusterRoleBinding
  resources:
  - badcrb01
  - badcrb02
  - badcrb03
  result: fail
- policy: restrict-binding-system-groups
  isValidatingPolicy: true
  kind: ClusterRoleBinding
  resources:
  - goodcrb01
  - goodcrb02
  - goodcrb03
  result: pass
- policy: restrict-binding-system-groups
  isValidatingPolicy: true
  kind: RoleBinding
  resources:
  - badrb01
  - badrb02
  - badrb03
  result: fail
- policy: restrict-binding-system-groups
  isValidatingPolicy: true
  kind: RoleBinding
  resources:
  - goodrb01
  - goodrb02
  - goodrb03
  result: pass
